--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'google_map_key', OC_P7_Google_Maps_Sdk_key
+        resValue 'string', 'google_map_key', OC_P7_Google_Maps_Sdk_key
     }
 
     buildTypes {
@@ -23,12 +26,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildFeatures {
         viewBinding true
+    }
+
+    testOptions {
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
     }
 }
 
@@ -40,8 +52,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.5"
 //    GLIDE
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    testImplementation 'androidx.test:core:1.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 //    EASY PERMISSIONS
     implementation 'pub.devrel:easypermissions:3.0.0'
@@ -56,13 +70,34 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
     implementation 'com.firebaseui:firebase-ui-storage:7.1.1'
 //    GOOGLE MAPS
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 //    FACEBOOK
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
-
+//    RETROFIT
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.okio:okio:2.2.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+//    REACTIVEX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+//    WORKER
+    implementation "androidx.work:work-rxjava2:2.6.0"
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.5"
+    androidTestImplementation "androidx.work:work-testing:2.6.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
